--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-di></app-di>
 <form [formGroup]="angForm" (ngSubmit)=" angForm.status !== 'INVALID' &&validacija()">
   <h2>Dodaj let</h2>
 
