--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="navbar">
+  <!--Linkovi rutiranja-->
   <a routerLink="/ponuda" routerLinkActive="active" ariaCurrentWhenActive="page">Ponuda</a>
   <a routerLink="/preporuka" routerLinkActive="active" ariaCurrentWhenActive="page">Preporuka</a>
   <a routerLink="/onama" routerLinkActive="active" ariaCurrentWhenActive="page">O nama</a>
