--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,3 +88,21 @@
 <div>
   <app-rxjs></app-rxjs>
 </div>
+<div>
+  <table class="table table-hover">
+    <thead class="thead-dark">
+    <tr>
+    <th scope="col">#</th>
+    <th scope="col">Title</th>
+    <th scope="col">Body</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let flight of _flights$ | async">
+    <td>{{ flight.id }}</td>
+    <td>{{ flight.polazak }}</td>
+    <td>{{ flight.dolazak }}</td>
+    </tr>
+    </tbody>
+    </table>
+</div>
